--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
   <mat-toolbar>
     <span style="margin-left: 10px;">CUSTOM WOODS</span>
     <span class="example-spacer"></span>
-    <button  mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <button  mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" onclick="location.href = 'https://custom-woods.herokuapp.com/inicio'">
       <span class="example-spacer"></span>
-      <mat-icon><a href="https://custom-woods.herokuapp.com/inicio"></a> home</mat-icon>
+      <mat-icon onclick=""><a href="https://custom-woods.herokuapp.com/inicio"></a> home</mat-icon>
     </button>
   </mat-toolbar>
   
